--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>MEDEXPERTS HEALTHCARE - Akademik Sağlık Merkezi</title>
+    <title>MEDEXPERTS HEALTHCARE</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -46,26 +46,21 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
-        .mask-image-b-fade {
-            -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
-            mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
-        }
-        .mask-image-l-fade {
-            -webkit-mask-image: linear-gradient(to left, black 80%, transparent 100%);
-            mask-image: linear-gradient(to left, black 80%, transparent 100%);
-        }
     </style>
 <script type="importmap">
 {
   "imports": {
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-background-light dark:bg-background-dark text-text-light dark:text-text-dark antialiased transition-colors duration-300">
+<body class="bg-gray-50 dark:bg-gray-900 text-text-light dark:text-text-dark antialiased transition-colors duration-300">
     <div id="root"></div>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
